Change data in .txt file

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <title>PacMan</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="style.css">
+    <link rel="text" type="text/txt" href="map/map1.txt"
 </head>
 <body>
     <!-- All of our HTML code goes here... -->
@@ -16,6 +17,7 @@
 
 	<!-- End of HTML-->
 </body>
+<script src="js/readFile.js"></script>
 <script src="js/moving.js"></script>
 <script src="js/main.js"></script>
 <script src="js/bfs.js"></script>
